Anonymous | Login | 2021-01-18 07:47 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0030066 | Community | [OCCT] OCCT:Data Exchange | public | 2018-08-15 06:20 | 2020-09-17 20:01 | ||||||||
Reporter | Vico Liang | ||||||||||||
Assigned To | gka | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0030066: Fail to load VRML from ArcGIS | ||||||||||||
Description | The uploaded file FromGIS.wrl is valid and can be loaded into other software, but it's failed to load into occt. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|
(0078648) Vico Liang (developer) 2018-08-16 12:41 edited on: 2018-08-16 12:43 |
There are two problems after digging into source code: 1. The file exported from ArcGIS is encoded as utf8-BOM, it's not correctly processed in OCCT VRML parser. 2. The file exported from ArcGIS writes "coordIndex" in a line, it may be too long for reader, which will cause OCCT VRML parser failed to process it. These two tips may help to fix this issue. |
![]() |
|||
Date Modified | Username | Field | Change |
2018-08-15 06:20 | Vico Liang | New Issue | |
2018-08-15 06:20 | Vico Liang | Assigned To | => gka |
2018-08-15 06:20 | Vico Liang | File Added: FromGIS.wrl | |
2018-08-16 12:41 | Vico Liang | Note Added: 0078648 | |
2018-08-16 12:43 | Vico Liang | Note Edited: 0078648 | View Revisions |
2019-07-10 22:03 | abv | Target Version | 7.4.0 => 7.5.0 |
2020-09-17 20:01 | gka | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |