0030066: Data Exchange - Fail to load VRML from ArcGIS

Fixed VrmlData_Scene::readHeader method